# Automatonator

./: Cargo.toml  LICENSE  README.md  flake.nix
data/dfa/: .$importantdfa.drawio.xml.bkp  carousel.drawio  dfa-empty-test.txt  importantdfa.drawio.xml  is-uneven-capped.drawio.xml  mod.drawio
data/nfa/: equivNFA2.drawio.xml
data/pda/: pda.drawio.xml  pdacompli.drawio.xml
resources/: automat.gr  dfa.xml
resources/a/: automat.xml  tdfa.drawio
resources/automatons/: equivNFA.drawio  equivNFA1.drawio.xml  pda.drawio.xml  t.xml
resources/c/: pdawords.txt
src/: args.rs  automat.gr  main.rs
src/automatons/: automaton.rs  dfa.rs  evaluation.rs  kpda.rs  mod.rs  nfa.rs  parsing.rs  pda.rs  shared.rs
src/shared/: automaton.rs  evaluation.rs  mod.rs  parsing.rs  utils.rs
src/tests/: dfa_test.rs  mod.rs  nfa_test.rs  pda_test.rs
