[package]
name = "automatonator"
version = "0.2.1"
edition = "2021"
description = "a tool for parsing and comparing automatons in text or xml exported from draw.io"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colog = "1.3.0"
log = "0.4.25"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
roxmltree = "0.20.0"
